frontend_tests/negative/assignment_count/go.mod
module example.com/renvotests/negative/assignment_count

go 1.25
